; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_mg_disk.c_mg_unexpected_intr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_mg_disk.c_mg_unexpected_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_host = type { i64 }

@MG_REG_STATUS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"mg_unexpected_intr\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_host*)* @mg_unexpected_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mg_unexpected_intr(%struct.mg_host* %0) #0 {
  %2 = alloca %struct.mg_host*, align 8
  %3 = alloca i32, align 4
  store %struct.mg_host* %0, %struct.mg_host** %2, align 8
  %4 = load %struct.mg_host*, %struct.mg_host** %2, align 8
  %5 = getelementptr inbounds %struct.mg_host, %struct.mg_host* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @MG_REG_STATUS, align 8
  %8 = add i64 %6, %7
  %9 = call i32 @inb(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.mg_host*, %struct.mg_host** %2, align 8
  %12 = call i32 @mg_dump_status(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %10, %struct.mg_host* %11)
  ret void
}

declare dso_local i32 @inb(i64) #1

declare dso_local i32 @mg_dump_status(i8*, i32, %struct.mg_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
